[package]
name = "ringvrf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zk-utils-test = { git = "https://github.com/ABMatrix/zk-utils-test.git", branch = "wasm", default-features = false }
curve25519-dalek = { git = "https://github.com/ABMatrix/curve25519-dalek.git", branch = "pub", version = "2", default-features = false, features = ["serde", "alloc"] }
sha3 = { version = "0.8", default-features = false }
polynomials = { git = "https://github.com/ABMatrix/polynomials.git", branch = "wasm", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "1.0.0", default-features = false, features = ["rand", "u64_backend", "alloc"] }
sha2 = { version = "0.9.1", default-features = false }

[dev-dependencies]
ed25519-dalek = "1"

[features]
default = ["std"]
std = ["curve25519-dalek/std", "sha3/std", "serde_json/std", "serde/std", "ed25519-dalek/std", "sha2/std"]
