[package]
name = "ringvrf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { git = "https://github.com/ABMatrix/curve25519-dalek.git", branch = "pub", version = "*", default-features = false, features = ["serde", "alloc", "u64_backend"]}
sha3 = { version = "0.8", default-features = false }
polynomials = { git = "https://github.com/ABMatrix/polynomials.git", branch = "wasm", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.9.1", default-features = false }
ed25519-dalek = { version = "1.0.0", default-features = false, features = ["rand", "u64_backend", "alloc"] }
p256 = { version = "0.8", default-features = false, features = ["ecdsa"] }
k256 = { version = "0.8", default-features = false, features = ["ecdsa"] }
#curv = { git = "https://github.com/sgx-test/curv-sgx", branch = "0.7.0-sgx-struct", version = "0.7", default-features = false }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.rand]
version = "0.8"
default-features = false
features = ["getrandom"]
optional = true

[dependencies.rand_core]
version = "0.5.1"
default-features = false
features = ["getrandom"]
optional = true

[dev-dependencies]
ed25519-dalek = "1"

[features]
default = ["std"]
std = ["curve25519-dalek/std", "sha3/std", "serde_json/std", "serde/std", "ed25519-dalek/std", "sha2/std", "polynomials/std", "prove"]
prove = ["rand", "rand_core"]